--- a/views/vwTeacher/addCourse.hbs
+++ b/views/vwTeacher/addCourse.hbs
@@ -1,157 +1,237 @@
 <!--Phan Huy create courses view-->
 <div class="d-lg-flex justify-content-lg-center">
-    <div class="contents order-2 order-md-1">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-md-10 py-5 text-white">
-                    <h2 class="font-weight-bold font-italic">Create new course</h2>
-                    <div class="bg-secondary rounded" >
-                        <blockquote class="mb-0 font-weight-bold d-flex" style="font: 1.4rem/1.8rem Georgia, serif; text-align: center;">
-                            <q> Teachers have three loves: love of learning, love of learners, and the love of bringing the first two loves together. </q>
-                        </blockquote>
-                    </div>
-                    <div class="align-items-center text-center">
-                        <p class="font-italic"><strong>Scott Hayden</strong></p>
-                    </div>
-                    <form action="/teacher/addCourse" method="post" class="mt-3" enctype="multipart/form-data">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="courseName">Course Name</label>
-                                    <input type="text" name="courseName" class="form-control" placeholder="Full Web Development Course 2023" id="courseName" required>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label for="title">Instructor</label>
-                                    <input type="text" name="instructor" class="form-control" value="{{this.teacher.teacherName}}" placeholder="{{this.teacher.teacherName}}" id="instructor" readonly>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label for="title">Title</label>
-                                    <input type="text" name="title" class="form-control" placeholder="" id="title" required>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label for="courseID">Course ID</label>
-                                    <input type="text" name="courseID" class="form-control" placeholder="e.g. 1,2,3,..." id="courseID" required>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label for="selectCatID">Categories</label>
-                                    <select class="form-control" id="selectCatID" name="catID">
-                                        <option class="form-control input-group" value="1" name="catID">Categories 1</option>
-                                        <option class="form-control" value="2" >Categories 2</option>
-                                        <option class="form-control" value="3" >Categories 3</option>
-                                        <option class="form-control" value="4" >Categories 4</option>
-                                        <option class="form-control" value="5" >Categories 5</option>
-                                    </select>
-                                </div>
-                            </div>
-                            
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label for="prices">Price</label>
-                                    <select class="form-control" id="prices" name="price">
-                                        <option value="199000" name="catID">199,000VND</option>
-                                        <option value="299000" name="catID">299,000VND</option>
-                                        <option value="499000" name="catID">499,000VND</option>
-                                        <option value="599000" name="catID">599,000VND</option>
-                                        <option value="899000" name="catID">899,000VND</option>
-                                        <option value="999000" name="catID">999,000VND</option>
-                                        <option value="1099000" name="catID">1,099,000VND</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label for="promotion">Promotion</label>
-                                    <input type="text" name="promotion" class="form-control" placeholder="e.g. 100000VND..." id="promotion" required>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <label for="lec_num">Number of lectures</label>
-                                <div class="form-group">
-                                    
-                                    <input name="lec_num" type="number" min="1" step="1"/>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <label for="student_num">Number of students</label>
-                                <div class="form-group">
-                                    
-                                    <input name="student_num" type="number" min="1" step="1"/>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <label for="teacherNumber">Instructor ID:</label>
-                                <div class="form-group">
-                                    
-                                    <input name="teacherNumber" type="text" placeholder="{{this.teacher.teacherID}}" value="{{this.teacher.teacherID}}" readonly/>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <label for="lec_num">Rating</label>
-                                <div class="form-group">
-                                    
-                                    <input name="rating_num" type="number" min="1" step="1"/>
-                                </div>
-                            </div>
-                            
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group first">
-                                    <label for = "Files">Course Image</label>
-                                    <div class="file-upload">
-                                        <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
-
-                                        <div class="image-upload-wrap">
-                                            <input class="file-upload-input" name="Files" type='file' onchange="readURL(this);" accept="image/*" />
-                                            <div class="drag-text">
-                                                <h3>Drag and drop a file or select add Image</h3>
-                                            </div>
-                                        </div>
-                                        <div class="file-upload-content">
-                                            <img class="file-upload-image" src="#" alt="your image" />
-                                            <div class="image-title-wrap">
-                                                <button type="button" onclick="removeUpload()" class="remove-image">Remove <span class="image-title">Uploaded Image</span></button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <label for="email">Description</label>
-                                    <textarea name="description" required>
-                                    </textarea>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-1" style="visibility:hidden">
-                                <label for="hidden">Hidden</label>
-                                <div class="form-group">
-                                    
-                                    <input name="hidden" type="text" placeholder="1" value="1" readonly/>
-                                </div>
-                            </div>
-                        <div class="d-flex justify-content-between">
-                            <div>
-                                <button type="submit" class="btn btn-outline-light">
-                                    <i class="fa fa-backward" aria-hidden="true"></i>
-                                    Cancel
-                                </button>
-                            </div>
-                            <div>
-                                <button type="submit" class="btn btn-primary ">
-                                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                                    Add Course
-                                </button>
-                            </div>
-                        </div>
-                    </form>
+  <div class="contents order-2 order-md-1">
+    <div class="container">
+      <div class="row align-items-center justify-content-center">
+        <div class="col-md-10 py-5 text-white">
+          <h2 class="font-weight-bold font-italic">Create new course</h2>
+          <div class="bg-secondary rounded">
+            <blockquote
+              class="mb-0 font-weight-bold d-flex"
+              style="font: 1.4rem/1.8rem Georgia, serif;
+                            text-align: center;"
+            >
+              <q>
+                Teachers have three loves: love of learning, love of learners,
+                and the love of bringing the first two loves together.
+              </q>
+            </blockquote>
+          </div>
+          <div class="align-items-center text-center">
+            <p class="font-italic"><strong>Scott Hayden</strong></p>
+          </div>
+          <form
+            action="/teacher/addCourse"
+            method="post"
+            class="mt-3"
+            enctype="multipart/form-data"
+          >
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="courseName">Course Name</label>
+                  <input
+                    type="text"
+                    name="courseName"
+                    class="form-control"
+                    placeholder="Full Web Development Course 2023"
+                    id="courseName"
+                    required
+                  />
                 </div>
+              </div>
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="title">Instructor</label>
+                  <input
+                    type="text"
+                    name="instructor"
+                    class="form-control"
+                    value="{{this.teacher.teacherName}}"
+                    placeholder="{{this.teacher.teacherName}}"
+                    id="instructor"
+                    readonly
+                  />
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="title">Title</label>
+                  <input
+                    type="text"
+                    name="title"
+                    class="form-control"
+                    placeholder=""
+                    id="title"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="courseID">Course ID</label>
+                  <input
+                    type="text"
+                    name="courseID"
+                    class="form-control"
+                    placeholder="e.g. 1,2,3,..."
+                    id="courseID"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="selectCatID">Categories</label>
+                  <select class="form-control" id="selectCatID" name="catID">
+                    <option
+                      class="form-control input-group"
+                      value="1"
+                      name="catID"
+                    >Categories 1</option>
+                    <option class="form-control" value="2">Categories 2</option>
+                    <option class="form-control" value="3">Categories 3</option>
+                    <option class="form-control" value="4">Categories 4</option>
+                    <option class="form-control" value="5">Categories 5</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="prices">Price</label>
+                  <select class="form-control" id="prices" name="price">
+                    <option value="199000" name="catID">199,000VND</option>
+                    <option value="299000" name="catID">299,000VND</option>
+                    <option value="499000" name="catID">499,000VND</option>
+                    <option value="599000" name="catID">599,000VND</option>
+                    <option value="899000" name="catID">899,000VND</option>
+                    <option value="999000" name="catID">999,000VND</option>
+                    <option value="1099000" name="catID">1,099,000VND</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="promotion">Promotion</label>
+                  <input
+                    type="text"
+                    name="promotion"
+                    class="form-control"
+                    placeholder="e.g. 100000VND..."
+                    id="promotion"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="col-md-3">
+                <label for="lec_num">Number of lectures</label>
+                <div class="form-group">
+
+                  <input name="lec_num" type="number" min="1" step="1" />
+                </div>
+              </div>
+              <div class="col-md-3">
+                <label for="student_num">Number of students</label>
+                <div class="form-group">
+
+                  <input name="student_num" type="number" min="1" step="1" />
+                </div>
+              </div>
+              <div class="col-md-3">
+                <label for="teacherNumber">Instructor ID:</label>
+                <div class="form-group">
+
+                  <input
+                    name="teacherNumber"
+                    type="text"
+                    placeholder="{{this.teacher.teacherID}}"
+                    value="{{this.teacher.teacherID}}"
+                    readonly
+                  />
+                </div>
+              </div>
+              <div class="col-md-3">
+                <label for="lec_num">Rating</label>
+                <div class="form-group">
+
+                  <input name="rating_num" type="number" min="1" step="1" />
+                </div>
+              </div>
+
             </div>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="form-group first">
+                  <label for="Files">Course Image</label>
+                  <div class="file-upload">
+                    <button
+                      class="file-upload-btn"
+                      type="button"
+                      onclick="$('.file-upload-input').trigger(
+                                            'click' )"
+                    >Add Image</button>
+
+                    <div class="image-upload-wrap">
+                      <input
+                        class="file-upload-input"
+                        name="Files"
+                        type="file"
+                        onchange="readURL(this);"
+                        accept="image/*"
+                      />
+                      <div class="drag-text">
+                        <h3>Drag and drop a file or select add Image</h3>
+                      </div>
+                    </div>
+                    <div class="file-upload-content">
+                      <img class="file-upload-image" src="#" alt="your image" />
+                      <div class="image-title-wrap">
+                        <button
+                          type="button"
+                          onclick="removeUpload()"
+                          class="remove-image"
+                        >Remove
+                          <span class="image-title">Uploaded Image</span></button>
+                      </div>
+                    </div>
+                  </div>
+                  <label for="email">Description</label>
+                  <textarea name="description" required>
+                  </textarea>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-1" style="visibility:hidden">
+              <label for="hidden">Hidden</label>
+              <div class="form-group">
+
+                <input
+                  name="hidden"
+                  type="text"
+                  placeholder="1"
+                  value="1"
+                  readonly
+                />
+              </div>
+            </div>
+            <div class="d-flex justify-content-between">
+              <div>
+                <button type="submit" class="btn btn-outline-light">
+                  <i class="fa fa-backward" aria-hidden="true"></i>
+                  Cancel
+                </button>
+              </div>
+              <div>
+                <button type="submit" class="btn btn-primary">
+                  <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                  Add Course
+                </button>
+              </div>
+            </div>
+          </form>
         </div>
+      </div>
     </div>
+  </div>
 </div>
